--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Yonabaru"></activity>
+        <activity android:name=".YonabaruStore"></activity>
+        <activity android:name=".Yonabaru" />
         <activity android:name=".Tomigusuku" />
         <activity android:name=".Yaese" />
         <activity android:name=".Haebaru" />
